# languageShowcase

./: .gitignore  .gitmodules  README.md  codeFormatting.md
C#/: AerospaceDashboard.sln  README.md
C#/AerospaceDashboard/: AerospaceDashboard.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
C#/AerospaceDashboard/Models/: AtmosphericLayer.cs  CelestialBody.cs  Orbit.cs
C#/references/: REFERENCES.md
C++/: CMakeLists.txt  README.md
C++/examples/: earth_mars.cpp  leo_to_geo.cpp
C++/include/hohmann/: celestial_body.hpp  constants.hpp  hohmann_transfer.hpp  orbit.hpp
C++/references/: REFERENCES.md
C++/src/: celestial_body.cpp  hohmann_transfer.cpp  main.cpp  orbit.cpp
FORTRAN/: README.md  fpm.toml
FORTRAN/app/: main.f90
FORTRAN/references/: REFERENCES.md
FORTRAN/src/: constants_module.f90  isa_module.f90
FORTRAN/test/: test_isa.f90
Javascript/: README.md  index.html  package-lock.json  package.json  vite.config.js
Javascript/references/: REFERENCES.md
Javascript/src/: main.js
Manim/: README.md  manim.cfg  requirements.txt
Manim/components/: atmosphere.py  equations.py  orbit.py  spacecraft.py
Manim/data/: constants.py
Manim/references/: REFERENCES.md
Manim/scenes/: hohmann_transfer.py  isa_atmosphere.py  orbital_basics.py  rocket_equation.py
PicoGK/: NozzleShowcase.sln  README.md
PicoGK/NozzleShowcase/: NozzleShowcase.csproj  Program.cs
PicoGK/references/: REFERENCES.md
Rust/: Cargo.toml  README.md
Rust/examples/: rocket_equation.rs  unit_demo.rs
Rust/references/: REFERENCES.md
Rust/src/: lib.rs
Rust/src/units/: angle.rs  force.rs  length.rs  mass.rs  mass_flow_rate.rs  mod.rs  pressure.rs  specific_impulse.rs  velocity.rs
(+15 files in other folders)
